# macos-remote-desktop

./: Makefile  meson.build  org.example.rdp.plist
packaging/: Info.plist
shaders/: avc-dual-view.metal
src/: main.c  mrd-rdp-private.h  mrd-types.h
src/encoding/: mrd-encode-session.h  mrd-encode-session.m
src/platform/: CGVirtualDisplayPrivate.h  SLSCursorPrivate.h  mrd-cursor-capture.h  mrd-cursor-capture.m  mrd-input-injector.h  mrd-input-injector.m  mrd-screen-capture.h  mrd-screen-capture.m  mrd-virtual-display.h  mrd-virtual-display.m
src/rdp/: mrd-rdp-audio.c  mrd-rdp-audio.h  mrd-rdp-clipboard.h  mrd-rdp-clipboard.m  mrd-rdp-disp.c  mrd-rdp-disp.h  mrd-rdp-gfx-surface.c  mrd-rdp-gfx-surface.h  mrd-rdp-graphics-pipeline.c  mrd-rdp-graphics-pipeline.h  mrd-rdp-server.c  mrd-rdp-server.h  mrd-session-rdp-cursor.c  mrd-session-rdp-frame.c  mrd-session-rdp-handshake.c  mrd-session-rdp-private.h  mrd-session-rdp.c  mrd-session-rdp.h
src/util/: mrd-auth.c  mrd-auth.h  mrd-bitstream.c  mrd-bitstream.h  mrd-damage-utils.c  mrd-damage-utils.h  mrd-telemetry.c  mrd-telemetry.h
